pocket-id/40-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: pocket-id
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id
          ports:
            - containerPort: 1411
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 200m
          volumeMounts:
            - name: pocket-id-data
              mountPath: /app/data
          readinessProbe:
            httpGet:
              path: /healthz
              port: 1411
            initialDelaySeconds: 10
            periodSeconds: 90
            timeoutSeconds: 5
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: 1411
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: pocket-id-data
          persistentVolumeClaim:
            claimName: pocket-id-data
