pocket-id/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  selector:
    app: pocket-id
  ports:
    - protocol: TCP
      port: 1411
      targetPort: 1411
