pocket-id/60-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocket-id-auth
  namespace: pocket-id
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://pocket-id.pocket-id.svc.cluster.local:1411/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://pocket.internal.czcx.cc/signin?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization, X-Auth-User, X-Auth-Email"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: "pocket.internal.czcx.cc"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocket-id
                port:
                  number: 1411
    - host: "*.internal.czcx.cc"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocket-id
                port:
                  number: 1411
  tls:
    - secretName: pocket-internal-tls-prod-cert
      hosts:
        - pocket.internal.czcx.cc
        - "*.internal.czcx.cc"
